# simulac

./: ChangeLog  Changes  DataStructures.h  Main.c  Makefile  Makefile.am  ParseDataBase.c  Pending  README  Util.h  configure.ac  simulac.ggo
examples/lambda/: ATermDataNUTR  Kin.RNAP  Makefile.am  OperatorPL  ProtDataCI  Seq.LambdaPRPAQ  TermDataTL1  gensims_vol.m
examples/lambda/config/: ATermDataNUTL  Cel.EColi  Kin.Ribosome  OperatorPRPRM  PromDataPL  PromDataPR  PromDataPRE  PromDataPRM  ProtDataCIII  ProtDataCro  Seq.LambdaPL
examples/lambda/matlab/: arkin_fig3.m  ciplot.m  runbatch.m  runsim.m
examples/lambda/python/: README  arkin.py  ciplot.py  gensims.py  lambda.cfg
src/: CellManager.c  Main.c  Makefile  Makefile.am  Memory.c  Memory.h  ParseDataBase.c  PromotorDynamics.c  README  SegmentDynamics.c  Util.c  Util.h  param.c  simulac.ggo
src/simulac/trunk/: ChangeLog  DataStructures.h  Main.c  ParseDataBase.c  PromotorDynamics.c  README  SegmentDynamics.c  Util.c  Util.h  configure.ac
src/simulac/trunk/doc/: Makefile.am  simulac.txi
src/simulac/trunk/examples/lambda/: IsoDataPRE  IsoDataPRM  Outline.Lambda  README  TermDataTR1  arkin_fig3.m  gensims_vol.m
src/simulac/trunk/examples/lambda/config/: IsoDataPL  IsoDataPR  Kin.CIICIII  Kin.Lambda  OperatorPRE  ProtDataCII  ProtDataN
src/simulac/trunk/examples/lambda/matlab/: fate.m
src/simulac/trunk/examples/lambda/python/: lambda.sys  phage.py  simulac.py
src/simulac/trunk/src/: Changes  DataStructures.h  Kinetics.c  Main.c  Makefile  ParseDataBase.c  ReactionManager.c  SegmentDynamics.c  cmdline.c  cmdline.h  param.c  param.h  rand.c  simulac.ggo
