AC_INIT([Simulac Biocircuit Simulator], [1.0.0],
        [Richard M. Murray <murray@cds.caltech.edu>],
        [simulac])
AM_INIT_AUTOMAKE		dnl initialize automake
AC_PROG_MAKE_SET		dnl set SET_MAKE macro in toplavel Makefile
AC_PROG_CC			dnl configure C compiler
AC_PROG_INSTALL			dnl configuration install
AC_CONFIG_FILES([Makefile src/Makefile doc/Makefile examples/lambda/Makefile])
AC_CHECK_LIB([m],[cos])
AC_OUTPUT
